new updates added

--- a/practice3.html
+++ b/practice3.html
@@ -41,9 +41,10 @@
     .butt{
      margin-left: 30%;
     }
- p{
-  margin-left: 40px;
-}    
+ h3{
+  text-align: center;
+  text-decoration: underline;
+ }   
   </style>
 </head>
 <body>
